--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,7 @@ default: &default
   encoding: utf8
   pool: 5
   username: root
-  password: hideka344
+  password: dumsco0522
   socket: /tmp/mysql.sock
 
 development:
